<resources>
    <string name="app_name">UdeskDemo</string>
    <string name="udesk_help_tips">帮助中心</string>
    <string name="udesk_conversion_tips">咨询会话</string>
    <string name="udesk_form_tips">留言表单</string>
    <string name="udesk_utils_tips">开发者功能</string>
    <string name="udesk_reset_init">重置域名和App Key</string>
    <string name="udesk_from_agentid">指定分配客服</string>
    <string name="udesk_from_groupid">指定分配客服组</string>
    <string name="udesk_unread_msg">获取未读消息</string>
    <string name="udesk_unread_msgcount">获取未读消息数量</string>
    <string name="udesk_update_userinfo">更新客户信息</string>
    <string name="udesk_update_uitemplemt">更换UI模板</string>
    <string name="udesk_send_commodity_link">发送商品链接</string>
    <string name="udesk_setting_push">推送消息设置</string>
    <string name="udesk_setting_en">设置英文</string>
    <string name="udesk_setting_navation">添加导航栏</string>

    <string name="udesk_update_nick_name">姓名</string>
    <string name="udesk_update_hint_nick_name">请输入客户姓名</string>

    <string name="udesk_update_email">邮箱</string>
    <string name="udesk_update_hint_email">请输入客户邮箱</string>

    <string name="udesk_update_tel">电话</string>
    <string name="udesk_update_hint_tel">请输入客户电话</string>

    <string name="udesk_update_des">描述</string>
    <string name="udesk_update_hint_des">请输入描述内容</string>
    <string name="rob_cus_info">&amp;c_name=zhanshang&amp;c_email=0091@163.com&amp;c_phone=18123451678&amp;c_desc=ssasdsff&amp;c_org=kakak&amp;c_tags=qq&amp;c_other_emails=1234@126.com,45678@163.com</string>

    <string name="udesk_location">位置</string>
    <string name="udesk_search_location">搜索地点</string>
    <string name="udesk_search">搜索</string>
    <string name="udesk_location_info">位置信息</string>
    <string name="udesk_has_push">是否使用推送</string>
    <string name="udesk_has_voice">是否使用录音</string>
    <string name="udesk_has_photo">是否使用相册</string>
    <string name="udesk_has_camera">是否使用拍照</string>
    <string name="udesk_has_location">是否使用发送位置</string>
    <string name="udesk_has_file">是否使用上传文件</string>
    <string name="udesk_has_emotion">是否使用表情</string>
    <string name="udesk_has_more">是否使用更多控件</string>
    <string name="udesk_has_navigation">是否使用导航UI</string>
    <string name="udesk_has_navigation_survy">是否使用导航中的满意度评价</string>
    <string name="udesk_has_only_robot">是否只使用机器人</string>
    <string name="udesk_has_only_smallvideo">设置是否需要小视频</string>
    <string name="udesk_has_use_isscaleimg">传图是否压缩</string>
    <string name="udesk_use_commodity">配置商品链接</string>
    <string name="udesk_use_product">发送商品信息</string>
    <string name="udesk_quit_flag">配置放弃排队策略</string>
    <string name="udesk_set_screen">设置屏幕显示</string>
    <string name="udesk_set_en">设置英语</string>
    <string name="udesk_set_cn">设置中文</string>
    <string name="udesk_set_customer_head_url">设置客户的头像地址</string>
    <string name="udesk_set_message">设置带入一条消息 会话分配就发送给客服</string>
    <string name="udesk_set_robot_id">udesk 机器人配置常见问题 对应的Id值</string>
    <string name="udesk_set_baseinfo">创建用户的基本信息</string>
    <string name="udesk_set_basetextinfo">创建用户的自定义的文本信息</string>
    <string name="udesk_set_info_key">自定义字段的key</string>
    <string name="udesk_set_admin_info_key">管理员后台找key</string>
    <string name="udesk_set_key_map_value">key对应的value</string>
    <string name="udesk_set_value">填写value</string>
    <string name="udesk_update_info">更新用户的基本信息</string>
    <string name="udesk_update_text_info">更新用户的自定义的文本信息</string>
    <string name="udesk_domain">域名</string>
    <string name="udesk_start">开启</string>
    <string name="udesk_change_language">切换语言</string>
    <string name="udesk_change_language_hint">请查找对应android系统的对应简写填入，不确定找应用系统的简写在接口中查找填入</string>
    <string name="udesk_customer_head_url_default">http://qn-im.udesk.cn/QQ%E5%9B%BE%E7%89%8720180918095411_1539245227_643.jpg</string>



</resources>
