<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/android:white"
    android:orientation="vertical">

    <cn.udesk.widget.UdeskTitleBar
        android:id="@+id/udesktitlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center"
            android:text="@string/udesk_update_nick_name"
            android:textColor="@color/update_userinfo_key"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/udesk_update_name"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/udesk_update_hint_nick_name"
            android:textColor="@color/update_userinfo_value"
            android:textColorHint="@color/update_userinfo_value"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#E4E7F0" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center"
            android:text="@string/udesk_update_email"
            android:textColor="@color/update_userinfo_key"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/udesk_update_email"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/udesk_update_hint_email"
            android:textColor="@color/update_userinfo_value"
            android:textColorHint="@color/update_userinfo_value"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#E4E7F0" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center"
            android:text="@string/udesk_update_tel"
            android:textColor="@color/update_userinfo_key"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/udesk_update_tel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/udesk_update_hint_tel"
            android:textColor="@color/update_userinfo_value"
            android:textColorHint="@color/update_userinfo_value"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#E4E7F0" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center"
            android:text="@string/udesk_update_des"
            android:textColor="@color/update_userinfo_key"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/udesk_update_des"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/udesk_update_hint_des"
            android:textColor="@color/update_userinfo_value"
            android:textColorHint="@color/update_userinfo_value"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#E4E7F0" />


    <Button
        android:id="@+id/udesk_store"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="65dp"
        android:background="#0093FF"
        android:gravity="center"
        android:text="保存"
        android:textColor="@color/android:white"
        android:textSize="17sp" />


</LinearLayout>